@@ -270,7 +270,6 @@
 #define WINDOW_MUSIC_PLAYLIST             10500
 #define WINDOW_MUSIC_FILES                10501
 #define WINDOW_MUSIC_NAV                  10502
-#define WINDOW_MUSIC_TOP100               10503
 
 //#define WINDOW_VIRTUAL_KEYBOARD           11000
 #define WINDOW_DIALOG_SELECT              12000
@@ -337,6 +336,7 @@ public:
   float GetRightThumbX() const;
   float GetRightThumbY() const;
   bool FromKeyboard() const;
+  bool IsAnalogButton() const;
 
 private:
   DWORD m_dwButtonCode;
