@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 10-12-2005 fixed/changed: analog buttons can't turn off screensaver. plasma owners with flaky controllers (hi poing!) rejoice.
  - 10-12-2005 fixed: browse for subtitles (forgot some code)
  - 10-12-2005 fixed: Top 100 items in Music Library
  - 10-12-2005 fixed: IMDB "Movie Lookup" on folders
